<resources>
    <string name="app_name">My Restaurant</string>
    <string name="menu_image">Menu Image</string>
    <string name="food_image">Food Image</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity: </string>
    <string name="add_this_item">ADD THIS ITEM</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="see_cart">SEE CART</string>
    <string name="clear">CLEAR</string>
    <string name="item_name">Item Name</string>
    <string name="num">Num</string>
    <string name="price">$$</string>
    <string name="total">Total</string>
</resources>