<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/item_name"
            android:background="#C1D0CFCF"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/num"
            android:background="#C1D0CFCF"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/price"
            android:background="#C1D0CFCF"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/total"
            android:background="#C1D0CFCF"
            android:gravity="center"/>
    </LinearLayout>

    <ListView
        android:id="@+id/cart_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/added_food_detail_total_price"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:background="#C1D0CFCF"
            android:gravity="center"/>

        <Button
            android:id="@+id/button_cart_list_clear"
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/clear"
            android:background="#C1D0CFCF"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>