<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <ImageView
        android:id="@+id/food_detail_image"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/food_image" />

    <TextView
        android:id="@+id/food_detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:gravity="center"
        android:textColor="#FFEB3B"/>

    <TextView
        android:id="@+id/food_detail_description_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/description"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/food_detail_description"
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/food_detail_price"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/quantity"
            android:gravity="right"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/food_detail_quantity"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:hint="@string/enter_quantity"
            android:textColorHint="#BAB2B2"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/food_detail_addfood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/add_this_item"
            android:background="#C1D0CFCF"
            android:onClick="onAddFoodClicked"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>